--- a/src/app/component/game-data-element/game-data-element.component.html
+++ b/src/app/component/game-data-element/game-data-element.component.html
@@ -3,19 +3,19 @@
     <div *ngIf="isEdit" class="table-cell table-cell_solid">
       <ng-container *ngTemplateOutlet="editButtons"></ng-container>
       <select (change)="setElementType($event.target.value)" [ngModel]="gameDataElement.type">
-        <option value="">通常</option>
-        <option value="simpleNumber">数値</option>
-        <option value="numberResource">リソース</option>
-        <option value="abilityScore">能力値</option>
-        <option value="checkProperty">チェック</option>
-        <option value="note">ノート</option>
-        <option value="url">参照URL</option>
+        <option value="">통상</option>
+        <option value="simpleNumber">수치</option>
+        <option value="numberResource">리소스</option>
+        <option value="abilityScore">능력치</option>
+        <option value="checkProperty">체크</option>
+        <option value="note">노트</option>
+        <option value="url">참조URL</option>
       </select>
     </div>
     <div class="table-cell table-cell_solid">
       <ng-container *ngIf="isTagLocked">
         <span style="font-family: Cambria, Georgia; font-size: 0.9rem;">{{name}}</span>
-        <ng-container *ngIf="descriptionType === 'character' && name === 'height'"><br><span style="font-size: 0.4rem">0=画像依存</span></ng-container>
+        <ng-container *ngIf="descriptionType === 'character' && name === 'height'"><br><span style="font-size: 0.4rem">0=이미지 의존</span></ng-container>
       </ng-container>
       <ng-container *ngIf="!isTagLocked">
         <div class="hidden-spacer" style="font-family: Cambria, Georgia; font-size: 0.9rem;">{{name}}</div>
@@ -42,7 +42,7 @@
       <ng-container *ngIf="!isCommonValue">
         <ng-container [ngSwitch]="gameDataElement.type">
           <ng-container *ngSwitchCase="'simpleNumber'">
-            <!-- size属性がないと小さくならない -->
+            <!-- size속성이 없으면 작아지지 않는다 -->
             <div class="hidden-spacer" style="font-size: 1.0em; font-family: Cambria, Georgia;">{{value}}</div> 
             <input appLogging [logging.name]="tableTopObjectName" [logging.dataElement]="gameDataElement" [logging.disable]="isNoLogging" type="{{isNum(value) ? 'number' : 'text'}}" style="width:40%; min-width: 3em; max-width:8em; text-align:right" size="1" [(ngModel)]="value" placeholder="Number" />
           </ng-container>
@@ -58,7 +58,7 @@
             <input appLogging [logging.name]="tableTopObjectName" [logging.dataElement]="gameDataElement" [logging.disable]="isNoLogging" style="width:40%; max-width:5em; text-align:right" type="{{isNum(value) ? 'number' : 'text'}}" size="1" [(ngModel)]="value" placeholder="Value">
             <ng-container *ngIf="isEdit">
               <select class="modeifire-type" style="width:40%; max-width:5em" [(ngModel)]="currentValue">
-                <option value="">なし</option>
+                <option value="">없음</option>
                 <option value="div2">÷2</option>
                 <option value="div3">÷3 SRS,LHZ</option>
                 <option value="div4">÷4</option>
@@ -79,7 +79,7 @@
             <textarea style="width:100%; height:5em; min-width:50px; resize: bose; font-size: 0.8em;" [(ngModel)]="value" placeholder="Note"></textarea>
           </ng-container>
           <ng-container *ngSwitchCase="'url'">
-            <!-- size属性がないと小さくならない -->
+            <!-- size속성이 없으면 작아지지 않는다 -->
             <div class="hidden-spacer" style="font-size: 1.0em; font-family: Cambria, Georgia;">{{value}}</div>
             <span style="white-space: nowrap">
               <input type="url" style="width:calc(100% - 1.6rem); min-width:10px;" size="1" [(ngModel)]="value" placeholder="https://www.example.com" />
@@ -94,10 +94,10 @@
             <label class="color-sample" style="padding: 0px 2px 0px 0xp; width: 6.5em" [style.color]="value"><input type="color" style="width: 1em" [(ngModel)]="value" />{{value}}</label>
           </ng-container>
           <ng-container *ngSwitchDefault>
-            <!-- size属性がないと小さくならない -->
+            <!-- size속성이 없으면 작아지지 않는다 -->
             <div class="hidden-spacer" style="font-size: 1.0em; font-family: Cambria, Georgia;">{{value}}</div>
             <input *ngIf="!(isHideText && isTableTopObjectName)" style="width:100%; min-width:10px;" size="1" [(ngModel)]="value" placeholder="" />
-            <span *ngIf="isHideText && isTableTopObjectName" style="color: gray; font-size: 1.0em; font-family: Cambria, Georgia;">カード（裏面）</span>
+            <span *ngIf="isHideText && isTableTopObjectName" style="color: gray; font-size: 1.0em; font-family: Cambria, Georgia;">카드(뒷면)</span>
           </ng-container>
         </ng-container>
       </ng-container>
