--- a/src/app/component/game-character-generator/game-character-generator.component.html
+++ b/src/app/component/game-character-generator/game-character-generator.component.html
@@ -1,4 +1,4 @@
-<button (click)="openModal()">画像を選ぶ</button>
+<button (click)="openModal()">이미지를 고른다</button>
 <div>
   <img height="120" [src]="tableBackgroundImage.url | safe: 'resourceUrl'">
 </div>
@@ -8,11 +8,11 @@
     <input [(ngModel)]="size" type="range" title="{{size}}" min="{{minSize}}" max="{{maxSize}}" name="size" /> Size : <input [(ngModel)]="size"
       type="number" min="{{minSize}}" max="{{maxSize}}">
   </div>
-  <button (click)="createGameCharacter()">キャラクターを作る</button>
-  <button (click)="createGameTableMask()">マップマスクを作る</button>
+  <button (click)="createGameCharacter()">캐릭터를 작성</button>
+  <button (click)="createGameTableMask()">맵 마스크를 작성</button>
   <!--
   <div>
-    <button (click)="createGameCharacterForXML(xml)">↓のXMLからキャラクターを作る</button>
+    <button (click)="createGameCharacterForXML(xml)">↓의 XML로부터 캐릭터를 작성</button>
     <textarea style="width:100%; height:5em; resize: none;" [(ngModel)]="xml" placeholder="XML"></textarea>
   </div>
   -->
