--- a/src/app/component/dice-roll-table-setting/dice-roll-table-setting.component.html
+++ b/src/app/component/dice-roll-table-setting/dice-roll-table-setting.component.html
@@ -1,10 +1,10 @@
 <div class="flex-container">
   <div class="flex-item no-grow">
     <div>
-      <button style="font-size: smaller; margin-bottom: 3px" (click)="add()">ダイスボット表の追加</button>
+      <button style="font-size: smaller; margin-bottom: 3px" (click)="add()">다이스봇 표 추가</button>
     </div>
     <select #diceRollTableSelecter style="width: 14em;" size="15" (change)="onChangeDiceRollTable($event.target.value)">
-      <option *ngFor="let diceRollTable of diceRollTables" value="{{ diceRollTable.identifier }}" title="{{diceRollTable.name}}" [style.color]="diceRollTable.name == '' ? 'gray' : ''">{{ diceRollTable.name == '' ? '(無名のダイスボット表)' : diceRollTable.name }}</option>
+      <option *ngFor="let diceRollTable of diceRollTables" value="{{ diceRollTable.identifier }}" title="{{diceRollTable.name}}" [style.color]="diceRollTable.name == '' ? 'gray' : ''">{{ diceRollTable.name == '' ? '(이름없는 다이스봇 표)' : diceRollTable.name }}</option>
     </select>
   </div>
   <div class="flex-item">
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div>
-        <textarea style="width: 100%; height: 20em; margin-top: 3px; resize: vertical;" placeholder="1:数字と結果を:（コロン）で区切って記述&#13;&#10;2:結果２&#13;&#10;3:結果３&#13;&#10;4:…" [(ngModel)]="diceRollTableText" [attr.disabled]="!isEditable ? '' : null" ></textarea>
+        <textarea style="width: 100%; height: 20em; margin-top: 3px; resize: vertical;" placeholder="1:숫자와 결과를 :(콜론)으로 구분하여 기술&#13;&#10;2:결과２&#13;&#10;3:결과３&#13;&#10;4:…" [(ngModel)]="diceRollTableText" [attr.disabled]="!isEditable ? '' : null" ></textarea>
       </div>
       <hr/>
       <div>
@@ -38,22 +38,22 @@
             <!--
             <button [disabled]="isSaveing || !diceRollTables.length" (click)="saveAll()">
               <div style="position: relative;">
-                <div [ngClass]="{'is-hidden': isSaveing}">すべて保存</div>
+                <div [ngClass]="{'is-hidden': isSaveing}">전부 저장</div>
                 <div *ngIf="isSaveing" class="progress">{{progresPercent}}%</div>
               </div>
             </button>
             -->
             <button [disabled]="isSaveing" (click)="save()">
               <div style="position: relative;">
-                <div [ngClass]="{'is-hidden': isSaveing}">保存</div>
+                <div [ngClass]="{'is-hidden': isSaveing}">저장</div>
                 <div *ngIf="isSaveing" class="progress">{{progresPercent}}%</div>
               </div>
             </button>
-            <button class="danger" (click)="delete()">削除</button>
+            <button class="danger" (click)="delete()">삭제</button>
           </div>
         </ng-container>
         <ng-container *ngIf="isDeleted && selectedDiceRollTableXml">
-          <button (click)="restore()">元に戻す</button>
+          <button (click)="restore()">원래대로 되돌린다</button>
         </ng-container>
       </div>
     </ng-container>
@@ -61,9 +61,9 @@
 </div>
 <ng-container *ngIf="isEmpty">
   <div style="font-size: 12px;">
-    ※ダイスボット表がありません。
+    ※다이스봇 표가 없습니다.
     <ng-container *ngIf="isDeleted && selectedDiceRollTableXml">
-      <button (click)="restore()">元に戻す</button>
+      <button (click)="restore()">원래대로 되돌린다</button>
     </ng-container>
   </div>
 </ng-container>
