--- a/src/app/component/file-selecter/file-selecter.component.html
+++ b/src/app/component/file-selecter/file-selecter.component.html
@@ -24,7 +24,7 @@
       <option value="true">いずれか (OR)</option>
       <option value="">すべて (AND)</option>
     </select>
-    <label sytle="white-space: nowrap" title="最近使ったタグの画像を前に">
+    <label sytle="white-space: nowrap" title="최근 사용한 태그의 이미지를 앞으로">
       <input name="is-sort" value="Sort" type="checkbox" [(ngModel)]="isSort" checked="{{isSort ? 'checked' : ''}}" (change)="isSort = (isSort ? true : false)">
       <b style="font-size: smaller; margin-right: 3px">ソート</b>
     </label>
@@ -32,7 +32,7 @@
 </div>
 <div id="file-list" style="min-height: 250px; margin-left: 1px; padding-top: 3px">
   <span *ngIf="isAllowedEmpty" class="empty" style="display: inline-block;">
-    <button (click)="onSelectedFile(empty)" style="min-width: 100px; margin-left: -1px; margin-right: 3px">画像なし<br>/設定解除</button>
+    <button (click)="onSelectedFile(empty)" style="min-width: 100px; margin-left: -1px; margin-right: 3px">이미지 없음<br>/설정 삭제</button>
   </span>
   <div *ngFor="let file of images; trackBy: identify" @scaleInOut class="image" style="text-align: center; min-width: 100px; height: 120px; position: relative" [ngClass]="{'current-images': getCurrent(file)}">
     <div style="position: absolute; font-size: xx-small; text-align: left; bottom: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: none">
@@ -55,7 +55,7 @@
       <i class="material-icons red-eye" style="z-index: 5; margin-right: 2px; font-size: 16px; display: block">visibility</i>
     </div>
     <div *ngIf="getCurrent(file)" style="position: absolute; top: 0px; left: 0px; pointer-events: none; z-index: 5">
-      <b class="grow" style="font-size: 13px; color: red; padding-left: 2px">設定中</b>
+      <b class="grow" style="font-size: 13px; color: red; padding-left: 2px">설정중</b>
     </div>
     <img *ngIf="0 < file.url.length" [src]="file.url | safe: 'resourceUrl'" [alt]="file.name" height="120" (click)="getCurrent(file) ? false : onSelectedFile(file)">
     <img *ngIf="file.url.length <= 0" src="assets/images/loading.gif" alt="{{file.name}}">
