--- a/src/app/component/dice-symbol/dice-symbol.component.html
+++ b/src/app/component/dice-symbol/dice-symbol.component.html
@@ -29,7 +29,7 @@
                 <div class="back-tag is-3d" style="color: whitesmoke"><b>{{ownerName}}</b></div>
               </div>
               <div class="component-content is-3d"
-                [@changeFace]="!isCoin && isVisible ? face : null" [@changeFaceCoin]="isCoin && isVisible ? (face == '裏' ? 0 : 1) : null"
+                [@changeFace]="!isCoin && isVisible ? face : null" [@changeFaceCoin]="isCoin && isVisible ? (face == '뒤' ? 0 : 1) : null"
                 [@diceRoll]="!isCoin && animeState" [@coinFlip]="isCoin && animeState"
                 (@diceRoll.done)="animationShuffleDone($event)" (@coinFlip.done)="animationShuffleDone($event)" [style.transform]="isCoin ? 'rotateX(30deg)' : ''">
                   <img class="image front-face is-3d chrome-smooth-image-trick" *ngIf="0 < imageFile.url.length" [src]="imageFile.url | safe: 'resourceUrl'" [ngClass]="{'is-black-mask': !isVisible, 'is-harf-black-mask': isMine || (isGMMode && hasOwner) }">
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="is-3d" style="position: relative; top: -20%;" [style.width.px]="size * gridSize" [style.height.px]="size * gridSize"
-          [@changeFace]="!isCoin && isVisible ? face : null" [@changeFaceCoin]="isCoin && isVisible ? (face == '表' ? 1 : 2) : null"
+          [@changeFace]="!isCoin && isVisible ? face : null" [@changeFaceCoin]="isCoin && isVisible ? (face == '앞' ? 1 : 2) : null"
           [@diceRoll]="animeState"
           (@diceRoll.done)="animationShuffleDone($event)">
           <img *ngIf="!isFlip && isDropShadow && 0 < imageFile.url.length" class="image shadow is-3d" [src]="imageFile.url | safe: 'resourceUrl'" style="opacity: 0.7; filter: brightness(0) blur(1px)">
