--- a/src/app/component/chat-tab-setting/chat-tab-setting.component.html
+++ b/src/app/component/chat-tab-setting/chat-tab-setting.component.html
@@ -30,7 +30,7 @@
           <button (click)="upTabIndex()">↑</button>
           <button (click)="downTabIndex()">↓</button>
           <div style="float: right">
-          <button (click)="showLogOutput()"><i class="material-icons small-font">history_edu</i>ログ</button>
+          <button (click)="showLogOutput()"><i class="material-icons small-font">history_edu</i>로그</button>
           <button [disabled]="isSaveing" (click)="save()">
             <div style="position: relative;">
               <div [ngClass]="{'is-hidden': isSaveing}">저장</div>
