--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,7 +87,7 @@
         </a>
       </li>
     </ul>
-    <div class="self-only-indicater" style="font-size: 8px; text-align: center;"><b><sup class="self-only">*</sup>は自分のみ</b></div>
+    <div class="self-only-indicater" style="font-size: 8px; text-align: center;"><b><sup class="self-only">*</sup>는 자신만 해당</b></div>
   </nav>
 </ui-panel>
 <div #modalLayer></div>
